[package]
name = "inference-runtime-tensorrt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default  = []
tensorrt = []

[dependencies]
inference-core    = { workspace = true }
inference-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
