[package]
name = "atomr-infer-runtime-tensorrt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default  = []
tensorrt = []

[dependencies]
atomr-infer-core    = { workspace = true }
atomr-infer-runtime = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
