[package]
name = "inference-runtime-vllm"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
vllm    = ["inference-python-bridge/python"]

[dependencies]
inference-core          = { workspace = true }
inference-runtime       = { workspace = true }
inference-python-bridge = { workspace = true }
async-trait             = { workspace = true }
serde                   = { workspace = true }
