[package]
name = "atomr-infer-runtime-vllm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
vllm    = ["atomr-infer-python-bridge/python"]

[dependencies]
atomr-infer-core          = { workspace = true }
atomr-infer-runtime       = { workspace = true }
atomr-infer-python-bridge = { workspace = true }
async-trait             = { workspace = true }
serde                   = { workspace = true }
